--- a/java_app/src/main/resources/application.properties
+++ b/java_app/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=employees
-# spring.data.mongodb.username=admin
-# spring.data.mongodb.password=password
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/DB
+spring.datasource.username=root
+spring.datasource.password=SQL2019$
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+
+spring.main.allow-bean-definition-overriding=true
